# maraca_v02

./: .env.example  .gitignore  CHANGE_REQUESTS.md  MANUAL.md  MARACA_v02_generalize_tracker.md  PROJECT_ORCHESTRATION_TRACKER.md  README.md  current_process_status.md  docker-compose.yml  generalize_project.json  generalize_project_summary.md  project_generalize.md  project_generalize_handoff.md  project_generalize_tracker.md  project_milestones.md  project_tests.md  pyproject.toml  status_project.md
docs/: development_baseline.md  local_environment.md  production_readiness.md  service_setup.md  short_keyword_manual.md
fixtures/: fixture_catalog.json
research/: method_detail_AgentOrchHybrid.md  method_flow_AgentOrchHybrid.mmd  papers_database.csv  papers_database.sqlite  project_summary_outline_AgentOrchHybrid.md  proposals.md  skill_AgentOrchHybrid.md  top_10_methods.md
scripts/: setup_full_backend.ps1  test_full_backend.ps1
tests/: test_backend_adapters.py  test_backend_health.py  test_backend_manual.py  test_backend_setup_artifacts.py  test_broader_repository_save_parity.py  test_chunking_storage.py  test_connection_settings.py  test_durable_storage.py  test_evaluation_metrics.py  test_evidence_bundle_export.py  test_feedback_evaluation.py  test_feedback_improvement.py  test_graph_layer.py  test_indexing.py  test_ingestion.py  test_milestone1_smoke.py  test_milestone6_hardening.py  test_package_layout.py  test_planner_orchestration.py  test_planning.py  test_ranking.py  test_repository_hook_parity.py  test_retrieval_execution.py  test_serialization_golden.py  (+14 more)
(+47 files in other folders)
